# asteroids-game

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  core.h  main.cpp  main_win32.cpp  metrics.h  prng.h  time.cpp  time.h
